refined some codes and added notification code

--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ header h1 span {
     top: 45px;
     text-align: left;
     padding: 5px 10px;
-    color: red;
+    opacity: 0;
 }
 
 /* search form */
