--- a/css/style.css
+++ b/css/style.css
@@ -170,7 +170,10 @@ th, td {
 
 /* footer */
 footer {
+    position: absolute;
+    bottom: 0;
     margin-top: 50px;
+    width: 100%;
     background-color: #333;
     color: #fff;
 }
